templates/similar-users_template.yaml
---
# Source: similar-users/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: similar-users-release-name
  labels:
    app: similar-users
    chart: similar-users-0.1.10
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: similar-users
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 14110
        protocol: TCP
---
# Source: similar-users/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: similar-users-release-name
  labels:
    app: similar-users
    chart: similar-users-0.1.10
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: similar-users
    release: release-name
    routed_via: release-name
  ports:
    - name: similar-users
      targetPort: 14110
      port: 14110
---
# Source: similar-users/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: similar-users-release-name
  labels:
    app: similar-users
    chart: similar-users-0.1.10
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: similar-users
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: similar-users
        release: release-name
        routed_via: release-name
      annotations:
        checksum/secrets: 8b9a7cdf7987abad962f2effed321069d4cac6f128161707b3cc94cf47f997c4
        prometheus.io/port: "14110"
        prometheus.io/scrape: "true"        
    spec:
      containers:
        # The main application container
        - name: similar-users-release-name
          image: "docker-registry.wikimedia.org/wikimedia/mediawiki-services-similar-users:latest"
          imagePullPolicy: IfNotPresent
          command:
            - gunicorn
          args:
            - -b
            - 0.0.0.0:14110
            - similar_users.wsgi:configure_app()
          ports:
            - containerPort: 14110
          livenessProbe:
            tcpSocket:
              port: 14110
          resources:
            requests:
              cpu: 100m
              memory: 600Mi
            limits:
              cpu: 500m
              memory: 2Gi
          volumeMounts:
            - name: release-name-base-config
              mountPath: /etc/similar-users/
---
# Source: similar-users/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'similar-users-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'similar-users-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(SIMILAR_USERS_RELEASE_NAME_SERVICE_HOST)', 'http://similar-users-release-name:14110']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
